# noteagent

./: .coverage  .gitignore  Cargo.toml  INSTALLER_QUICKREF.md  Makefile  README.md  build-release.sh  install.sh  pyproject.toml
apps/macos/: .gitignore  README.md
apps/macos/NoteAgent/: PythonServer.swift
apps/macos/NoteAgent.xcodeproj/: project.pbxproj
apps/macos/NoteAgent.xcodeproj/xcshareddata/xcschemes/: NoteAgent.xcscheme
apps/macos/scripts/: build-bundle.sh  sign-bundle.sh
crates/noteagent-core/src/audio/: dsp.rs  source.rs  writer.rs
crates/noteagent-core/src/models/: transcript.rs
crates/noteagent-core/src/transcription/: live.rs  presets.rs
docs/: ARCHITECTURE.md  INSTALL.md  MACOS_APP_PLAN.md
noteagent-audio/: Cargo.toml
noteagent-audio/src/: capture.rs  device.rs  error.rs  lib.rs
src/noteagent/: audio.py  cli.py  model_download.py  server.py  storage.py  transcript.py
tests/: test_audio.py  test_transcript.py  test_transcript_wrapper.py  test_transcription.py
